# fabler

./: .gitattributes  .gitignore  Makefile  README.md  config.yaml  pyproject.toml  scene.yaml
.github/workflows/: auto-merge.yml  dependency-review.yml  lint.yml  release.yml
data/www/: index.html
data/www/assets/js/: main.js
notebooks/: demo.ipynb
storyteller/: __main__.py  config.py  director.py  model.py  server.py
storyteller/pipelines/: painter.py  singer.py  speaker.py  writer.py
storyteller/utils/: common.py
