[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project.scripts]
storyteller = "storyteller.__main__:main"


[project]
requires-python = ">=3.8"
version = "0.0.1"

name        = "storyteller"
description = ""
readme      = "README.md"
license     = "MIT"

dependencies = [
  "accelerate[test_trackers]",
  "diffusers",
  "transformers",
  "TTS",
  "pyyaml",
  "tensorboard",
]


[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
]


[tool.isort]
profile = "black"
force_sort_within_sections = true
