[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project.scripts]
storyteller = "storyteller.__main__:main"


[project]
requires-python = ">=3.8"
version = "0.0.1"

name        = "storyteller"
description = ""
readme      = "README.md"
license     = "MIT"

dependencies = [
  "accelerate[test_trackers]",
  "diffusers",
  "flask",
  "transformers",
  "TTS",
  "pyyaml",
  "tensorboard",
]


[project.optional-dependencies]
developer = [
  "black",
  "flake8",
  "isort",
]


[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
include = [
  "storyteller/",
  "data/",
  "README.md",
  "pyproject.toml",
  "LICENSE",
  "Makefile",
  "scene.yaml",
]
exclude = [
  "tools/",
]

[tool.hatch.metadata]
allow-direct-references = true


# Tools
[tool.bandit]
recursive = true
targets = [ "armory" ]
skips   = [
  "B101",  # Ignore defensive `assert`s (especially useful for mypy)
  "B404",  # Ignore warnings about importing subprocess
  "B603",  # Ignore warnings about calling subprocess.Popen without shell=True
  "B607",  # Ignore warnings about calling subprocess.Popen without a full path to executable
]

[tool.isort]
profile = "black"
force_sort_within_sections = true
