[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"


[project.scripts]
storyteller = "storyteller.__main__:main"
storyteller-web = "storyteller.server:serve"


[project]
requires-python = ">=3.8"
version = "0.0.1"

name        = "storyteller"
description = ""
readme      = "./.github/README.md"
license     = "MIT"

dependencies = [
  "accelerate[test_trackers]",
  "diffusers",
  "flask",
  "transformers",
  "TTS",
  "pyyaml",
  "tensorboard",
]


[project.optional-dependencies]
developer = [
  "black",            # Code formatting
  "isort",            # Code formatting
  "flake8",           # Linting
  "mypy",             # Type checking
  "types-PyYAML",     # Type checking
]


[tool.hatch.build]
ignore-vcs   = false
reproducible = true
directory    = "dist"
include = [
  ".git",
  ".github",
  ".gitignore",
  "storyteller",
  "utils",
  "data/",
  "LICENSE",
  "Makefile",
  "pyproject.toml",
  "scene.yaml",
]
exclude = [ ]

[tool.hatch.metadata]
allow-direct-references = true


# Tools
[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py39"]


[tool.bandit]
recursive = true
targets = [ "storyteller" ]
skips   = [
  "B101",  # Ignore defensive `assert`s (especially useful for mypy)
  "B404",  # Ignore warnings about importing subprocess
  "B603",  # Ignore warnings about calling subprocess.Popen without shell=True
  "B607",  # Ignore warnings about calling subprocess.Popen without a full path to executable
]


[tool.isort]
profile = "black"
force_sort_within_sections = true


[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = false
warn_unused_ignores = true

